# gpt-fish

./: .gitignore  README.md  pyproject.toml
gpt_fish/: give-a-bot-a-fish-simple.py  teach-a-bot-to-fish.py
